[package]
name = "audio_tui"
version = "0.1.0"
edition = "2021"
description = "Human-friendly TUI for PipeWire/PulseAudio audio management on Linux"
authors = ["audio_tui contributors"]
license = "MIT"

[[bin]]
name = "audio_tui"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# JSON parsing for pactl output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
unicode-width = "0.1"
itertools = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
